--- a/docs/architecture/5. redirectPsuToConsentAPI.md
+++ b/docs/architecture/5. redirectPsuToConsentAPI.md
@@ -1,32 +1,32 @@
 # Redirect PSU to consent API
 
-## [TppConsentSessionApi](dictionary.md#TppConsentSessionApi)
-The redirect start with a get request to the entryPoint of the TppConsentSessionApi, for authenticating a consent redirected by the TPP server to the TppConsentSessionApi.
-## TPP behavior prior to redirecting to the TppConsentSessionApi
+## [ConsentAuthorisationApi](dictionary.md#ConsentAuthorisationApi)
+The redirect start with a get request to the entryPoint of the ConsentAuthorisationApi, for authorizing a consent initiated on the TppBankingApi.
+## TPP behavior prior to redirecting to the ConsentAuthorisationApi
 The [redirectCode](dictionary.md#redirectCode) is a one time string that contains information used to retrieve redirectInfo from the TPP Server in a back channel.
 The redirectCode is short lived (like 10 seconds). This is, TPP server does not need to hold the consent session after expiration.
 The record indexed by the redirectCode must also be deleted by the TPP on first retrieval by the ConsentAPI.
 ### Initial request processing ConsentAPI
-- TppConsentSessionApi will use the redirectCode to retrieve the TppConsentSession from the back channel TPP endpoint.
-- From the TppConsentSession, a Psu2TppConsentSessionCookie will generated and set as a __httpOnly, Secure__ cookie in the TppCosentSessionUI.
+- ConsentAuthorisationApi will use the redirectCode to retrieve the TppConsentSession from the back channel TPP endpoint.
+- From the TppConsentSession, a ConsentAuthSessionCookie will generated and set as a __httpOnly, Secure__ cookie in the TppCosentSessionUI.
 - A consentSessionState will also be generated and returned to the TppCosentSessionUI for CSRF prevention.
 
 ### Interacting with the PsuUserAgent
 
 #### consentSessionState
-The [consentSessionState](dictionary.md#consentSessionState) is a transient reference of the consent request. It encodes a key that is used to encrypt information stored in the corresponding Psu2TppConsentSessionCookie.
+The [consentSessionState](dictionary.md#consentSessionState) is a transient reference of the consent request. It encodes a key that is used to encrypt information stored in the corresponding ConsentAuthSessionCookie.
 
 This is: consentSessionState = state-id + consentEncryptionKey
 
-All requests to the TppConsentSessionApi must always provide the [consentSessionState](dictionary.md#consentSessionState) as a __X-XRSF-Token__ and the Psu2TppConsentSessionCookie as a cookie. 
+All requests to the ConsentAuthorisationApi must always provide the [consentSessionState](dictionary.md#consentSessionState) as a __X-XRSF-Token__ and the ConsentAuthSessionCookie as a cookie. 
 
-The consentSessionState is allways included in the retruned AuthorizeResponse object that is used by the TppConsentSessionUI to display a qualified information page to the PSU prio to redirecting the PSU to the target ASPSP.
+The consentSessionState is allways included in the retruned AuthorizeResponse object that is used by the ConsentAuthorisationUI to display a qualified information page to the PSU prio to redirecting the PSU to the target ASPSP.
 
-Therefore TppConsentSessionApi shall never store the consentSessionState in the Psu2TppConsentSessionCookie.
+Therefore ConsentAuthorisationApi shall never store the consentSessionState in the ConsentAuthSessionCookie.
 
-The retruned AuthorizeResponse object is allways synchronized with the Psu2TppConsentSessionCookie set with the same HTTP response object.
+The retruned AuthorizeResponse object is allways synchronized with the ConsentAuthSessionCookie set with the same HTTP response object.
 
-Any session, account or payment information needed to manage the authorization process is stored in both AuthorizeResponse (for display) and in the encrypted in the Psu2TppConsentSessionCookie.
+Any session, account or payment information needed to manage the authorization process is stored in both AuthorizeResponse (for display) and in the encrypted in the ConsentAuthSessionCookie.
 The consentCookieString is httpOnly
 
 #### Redirecting PSU to the ASPSP
