OBG-85. Added dynamic input form to provide parameters during validation

--- a/core/banking-protocol/src/main/resources/messages.properties
+++ b/core/banking-protocol/src/main/resources/messages.properties
@@ -1,3 +1,13 @@
-ip.no.psu.ip.address=PSU ip address is missing
-uri.redirect.ok=Redirect URI missing
-uri.redirect.nok=Redirect NOK URI missing
+# Validations are defined in format:
+# input.<controlType>.<valueType>.<...> - 'input' is magic anchor to find code in message template
+# I.e.: 'input.textbox.string.no.psu.id'
+# where:
+# controlType can be: textbox, dropdown, ...
+# valueType can be: string, int, decimal, enum ...
+
+input.textbox.ipaddr.no.psu.ip.ipaddress=PSU ip address is missing
+input.textbox.string.no.psu.id=PSU bank login is missing
+input.textbox.string.no.aspsp.id=Bank id missing
+input.textbox.string.no.request.id=Request id missing
+input.textbox.string.uri.redirect.ok=Redirect URI missing
+input.textbox.string,uri.redirect.nok=Redirect NOK URI missing
