OBG-85. Initial usage of json path to map data to context

--- a/core/banking-protocol/src/main/resources/messages.properties
+++ b/core/banking-protocol/src/main/resources/messages.properties
@@ -5,9 +5,8 @@
 # controlType can be: textbox, dropdown, ...
 # valueType can be: string, int, decimal, enum ...
 
-input.textbox.ipaddr.no.psu.ip.ipaddress=PSU ip address is missing
-input.textbox.string.no.psu.id=PSU bank login is missing
-input.textbox.string.no.aspsp.id=Bank id missing
-input.textbox.string.no.request.id=Request id missing
-input.textbox.string.uri.redirect.ok=Redirect URI missing
-input.textbox.string,uri.redirect.nok=Redirect NOK URI missing
+no.ctx.psuId=PSU id (username to login to bank account)
+no.ctx.aspspId=Bank ID/code
+no.ctx.requestId=Request ID missing
+redirect.ok=Redirect OK url missing
+redirect.nok=Redirect NOK url missing
